[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
pyjnius = "^1.4.2"
Pillow = "^9.4.0"
python-ctags3 = "^1.5.0"
spark-nlp = "^4.3.0"
Sphinx = "^6.1.3"
ipython = "^8.10.0"
ipywidgets = "^8.0.4"
docutils = "^0.19"
lockfile = "^0.12.2"
tornado = "^6.2"
python-ntlm = "^1.1.0"
nfv-manager = "^1.3.3"
HTMLParser = "^0.0.2"
httpsproxy_urllib2 = "^1.0"
xds-protos = "^0.0.11"
keyring = "^23.13.1"
noaodatalab = "^2.20.0"
pyOpenSSL = "^23.0.0"
railroad = "^0.5.0"
toml = "^0.10.2"
Cython = "^0.29.33"
cryptography = "^39.0.1"
hid-converge-ngs = "^2.0.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"